--- a/Zadnja Vjezba/Index.html
+++ b/Zadnja Vjezba/Index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ko/Ko/Tko želi/ima želju postati Milijunas</title>
+<title>Udruženje Žena "SEKA"</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="Style.css">
 <script  src="https://code.jquery.com/jquery-3.3.1.slim.js"  integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="  crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <style media="screen">
@@ -32,43 +33,74 @@
     text-align: center;
     color: white;
 }
+#Boja{
+  color: white;
+}
+
+.video-container {
+  position: relative;
+}
+video {
+  height: auto;
+  vertical-align: middle;
+  width: 100%;
+}
+.overlay-desc {
+  background: rgba(0,0,0,0);
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+h1 {
+  color: white;
+  font-family: 'Nobile', sans-serif;
+  font-size: 9vw;
+  text-align: center;
+}
+
+
 </style>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav" >
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Centar za edukaciju, terapiju i rekreaciju Goražde</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Projekti</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <nav class="navbar navbar-expand-md bg-success navbar-light">
 
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-  <div class="container">
-    <img src="https://cdn.pixabay.com/photo/2014/12/17/21/30/wild-flowers-571940__340.jpg" style="width:100%;">
-    <div class="centered">
-
-    <h1>Udruženje Žena "SEKA"</h1>
-
-    </div>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav" >
+      <li class="nav-item active" >
+        <a class="nav-link" id="Boja" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" id="Boja" href="#">Centar za edukaciju, terapiju i rekreaciju Goražde</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" id="Boja" href="#">About</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" id="Boja" href="#">Contact</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" id="Boja" href="#">Projekti</a>
+      </li>
+    </ul>
   </div>
+</nav>
+
+
+<div class="video-container">
+	   <video autoplay loop muted>
+		     <source src="Hands.mp4" type="video/mp4">
+		     Your browser does not support the video tag.
+	   </video>
+     <div class="overlay-desc">
+        <h1>Udruženje Žena "SEKA"</h1>
+     </div>
+	</div>
 
 
 
