--- a/Zadnja Vjezba/Index.html
+++ b/Zadnja Vjezba/Index.html
@@ -7,6 +7,9 @@
 <script  src="https://code.jquery.com/jquery-3.3.1.slim.js"  integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="  crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <style media="screen">
@@ -55,11 +58,32 @@ video {
 }
 h1 {
   color: white;
-  font-family: 'Nobile', sans-serif;
-  font-size: 9vw;
+  font-family: Impact, Charcoal, sans-serif;
+  font-size: 150px;
   text-align: center;
 }
 
+h3 {
+  text-indent: 16px;
+  text-decoration: underline;
+}
+
+p {
+  text-align: justify;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+
+#sekcija {
+  background-color: #28A745;
+  border-radius: 20px;
+
+}
+
+#sekcija1 {
+  background-color: #28A745;
+  border-radius: 20px;
+  height: 350px;
+}
 
 </style>
 <body>
@@ -102,10 +126,79 @@ h1 {
      </div>
 	</div>
 
+    <div>
+      <h3>Nove Vijesti :</h3>
+    </div>
 
+
+ <section id="sekcija" class="col-md-8" >
+
+   <h2>Projekat "Podižemo glas"</h2>
+
+   <p>U TOKU JE IMPLEMENTACIJA PILOT PROJEKTA “PODIŽEMO GLAS !”
+      Početkom 2016 UŽ “SEKA” Goražde započela je implementaciju pilot projekta PODIŽEMO GLAS “Osnaživanje žena u ruralnim sredinama kojeg finasira FILIA die frauenstiftung Njemačka.
+      Za ovaj pilot projekat direktno su nas podstakle žene iz ruralnih sredina ili koje su prije živjele na selima, a koje dolaze na terapijski / savjetodavni rad u KućProjekat "Podižemo glas"u SEKA.
+      Ciljna skupina su žene iz ruralnih sredina. Predviđeni broj učesnica jeizmeđu deset do dvadeset u svakoj od tri lokalne sredine. Učesnice identificiraju potrebe i probleme u svojim sredinama, i na taj način potiču dalje aktivnosti. Do sada su relizovane pred radionice i prve radionice u Ustikolini, Prači i Zupčićima. Odziv žena je na zavidnom nivou kao i motivacija za rad na radionicama.
+      Uzele smo u obzir da će se ove godine održati lokalni izbori te ovim pilot projektom prije izbora želimo započeti na jačanju uloge žene u demokratskim procesima. To nam je i primarni cilj, a planirale smo ga ostvariti pojedinačnim ciljevima:<br><br>
+      -Omogućiti mjesto gdje žene mogu osvijestiti i iskazati svoje potrebe <br>
+      -Kroz zajedničke radionice odrediti prioritete kod žena na lokalnom nivou <br>
+      -Upoznavanje sa demokratskim procesima i civilnim tehnikama borbe za ženska prava <br>
+      -Zagovaranje ovih prioriteta kod lokalnih vlasti; <br>
+      -Osvještavanje lične odgovornosti u demokratskim procesima što uključuje izlazak na izbore i glasanje na osnovu ličnih ubjeđenja a ne eventualnih pritiska od strane sredine. <br><br>
+      Za dalji tok realizacije ovog projekta redovno ćemo informisati preko facebook stranice UŽ “SEKA” Goražde.
+</p>
+
+</section>
+
+
+
+<section class="col-md-3" id="sekcija1" style="margin-left:20px;width:700px;" >
+
+  <div class="container-fluid">
+    <h2>Slike</h2>
+    <div id="myCarousel" style="width:100%;height:270px" class="carousel slide" data-ride="carousel">
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+
+        <div class="item active">
+          <img src="https://udruzenjezenaseka.files.wordpress.com/2016/06/12672101_10154680879354867_5959853399259700417_o.jpg?w=1200&h=&crop=1" style="width:100%;height:270px">
+        </div>
+
+        <div class="item">
+          <img src="https://udruzenjezenaseka.files.wordpress.com/2016/06/12898402_10154680860264867_4934040262071805555_o.jpg?w=1200&h=&crop=1" style="width:100%;height:270px">
+        </div>
+
+        <div class="item">
+          <img src="https://udruzenjezenaseka.files.wordpress.com/2016/06/img_7648.jpg?w=1000&h=&crop=1" style="width:100%;height:270px">
+        </div>
+
+        <div class="item">
+          <img src="https://udruzenjezenaseka.files.wordpress.com/2016/06/img_7660.jpg?w=1000&h=&crop=1" style="width:100%;height:270px">
+        </div>
+
+        <div class="item">
+          <img src="https://udruzenjezenaseka.files.wordpress.com/2016/06/13331149_10154911548784867_3523695681403897000_n1.jpg?w=700&h=&crop=1" style="width:100%;height:270px">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+</section>
 
 
 
 
 </body>
+<script type="text/javascript">
+
+</script>
 </html>
