--- a/Zadnja Vjezba/Index.html
+++ b/Zadnja Vjezba/Index.html
@@ -10,82 +10,8 @@
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+ <link rel="stylesheet" href="Style.css">
 </head>
-<style media="screen">
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 2530px;
-  height: 500px;
-}
-#slika{
-  position: absolute;
-}
-
-
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.container {
-    position: relative;
-    text-align: center;
-    color: white;
-}
-#Boja{
-  color: white;
-}
-
-.video-container {
-  position: relative;
-}
-video {
-  height: auto;
-  vertical-align: middle;
-  width: 100%;
-}
-.overlay-desc {
-  background: rgba(0,0,0,0);
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-h1 {
-  color: white;
-  font-family: Impact, Charcoal, sans-serif;
-  font-size: 150px;
-  text-align: center;
-}
-
-h3 {
-  text-indent: 16px;
-  text-decoration: underline;
-}
-
-p {
-  text-align: justify;
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-}
-
-#sekcija {
-  background-color: #28A745;
-  border-radius: 20px;
-
-}
-
-#sekcija1 {
-  background-color: #28A745;
-  border-radius: 20px;
-  height: 350px;
-}
-
-</style>
 <body>
 
   <nav class="navbar navbar-expand-md bg-success navbar-light">
@@ -152,12 +78,12 @@ p {
 
 
 
-<section class="col-md-3" id="sekcija1" style="margin-left:20px;width:700px;" >
+<section class="col-md-3" id="sekcija1" style="margin-left:20px;width:32%;" >
 
   <div class="container-fluid">
     <h2>Slike</h2>
     <div id="myCarousel" style="width:100%;height:270px" class="carousel slide" data-ride="carousel">
-      <!-- Wrapper for slides -->
+
       <div class="carousel-inner">
 
         <div class="item active">
@@ -181,7 +107,7 @@ p {
         </div>
       </div>
 
-      <!-- Left and right controls -->
+
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
         <span class="sr-only">Previous</span>
@@ -198,7 +124,4 @@ p {
 
 
 </body>
-<script type="text/javascript">
-
-</script>
 </html>
